<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C2DEAE"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/filterEmotional"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/filterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filter Mood Events"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <!-- First CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardFromDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/fromDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DEEDCC"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="From: (Date Picker)"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textFromDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="February 8, 2025"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardToDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/toDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DEEDCC"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To: (Date Picker)"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textToDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="February 8, 2025"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <!-- A vertical layout for TextView and Spinner -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DEEDCC"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recent Week and Ordering:"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switchRecent7Days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:text="Toggle Last 7 Days"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/ascendingOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:text="Ascending Order:"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <!-- A vertical layout for TextView and Spinner -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DEEDCC"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="Emotional State:"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkboxAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="All"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxHappy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/happy"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxSad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sad"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxConfused"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/confused"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxAngry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/angry"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxDisgusted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/disgusted"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxAfraid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/afraid"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxShameful"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/shameful"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxSuprised"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/surprised"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <!-- A vertical layout for TextView and Spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DEEDCC"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Filter reason: (max 200 chars)"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reasonDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="Please enter your text input here..."
                    android:maxLength="200"
                    android:minHeight="48dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterEmotional">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="Apply Filters"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#405F12"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResetFilter"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="Reset Filters"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#405F12"
            app:cornerRadius="8dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>